--- a/build.gradle
+++ b/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     testCompile("junit:junit:4.11")
     testCompile("org.mockito:mockito-core:1.10.19")
     testCompile("org.spockframework:spock-core:0.7-groovy-2.0")
+    testCompile("org.hamcrest:hamcrest-core:1.3")
+    testCompile("cglib:cglib-nodep:3.1")
+    testCompile("org.objenesis:objenesis:2.1")
 }
