--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
+apply plugin: 'groovy'
 
 sourceCompatibility = 1.8
 version = '1.0'
