--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,12 +13,13 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/cinema
     username: root
-    password: root
+    password:
 
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
+      dialect: MySQLDialect
 
 
 ---
@@ -30,10 +31,11 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/cinemaTest
     username: root
-    password: root
+    password:
 
   jpa:
     open-in-view: true
     show-sql: true
     hibernate:
       ddl-auto: update
+      dialect: MySQLDialect
