--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.8.11",
     "gulp-ignore": "^1.2.1",
     "gulp-jshint": "^1.10.0",
+    "gulp-sass": "^2.0.1",
     "gulp-util": "^3.0.4",
     "jshint-stylish": "^1.0.2"
   }
