--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-ignore": "^1.2.1",
+    "gulp-include-source": "0.0.5",
     "gulp-jshint": "^1.10.0",
     "gulp-sass": "^2.0.1",
     "gulp-util": "^3.0.4",
